# hinotify

./: .gitignore  .travis.yml  ANNOUNCE  CHANGELOG.md  Makefile  README  README.html  README.md  Setup.lhs  hinotify.cabal  hinotify.css
docs/hcar/: hinotify-Lh.tex
examples/DirTree/: DirTree.hs
examples/simple/: simple.hs
src/System/: INotify.hsc
src/System/INotify/: ByteString.hsc  Masks.hsc
test/: MoveSpec.hs  Utils.hs
tests/: Utils.hs  simple.hs  test-all  test001-list-dir-contents-BS.hs  test001-list-dir-contents.hs  test002-writefile-BS.hs  test002-writefile.hs  test003-removefile-BS.hs  test003-removefile.hs  test004-modify-file-BS.hs  test004-modify-file.hs  test005-move-file-BS.hs  test005-move-file.hs  test006-callbackHang.hs
tests/DirTree/: DirTree.hs
tests/Utils/: ByteString.hs
tests/simple/: simple.hs
