name:               hinotify
version:            0.3.8.1
build-type:         Simple
synopsis:           Haskell binding to inotify
description:
    This library provides a wrapper to the Linux Kernel's inotify feature,
    allowing applications to subscribe to notifications when a file is
    accessed or modified.
category:           System
homepage:           https://github.com/kolmodin/hinotify.git
license:            BSD3
license-file:       LICENSE
author:             Lennart Kolmodin
maintainer:         Lennart Kolmodin <kolmodin@gmail.com>
extra-source-files: README.md, CHANGELOG.md
cabal-version:      >= 1.8

source-repository head
  type: git
  location: git://github.com/kolmodin/hinotify.git

library
    build-depends:  base >= 4.5.0.0 && < 5, bytestring, containers, directory, unix
    extensions:     ForeignFunctionInterface

    exposed-modules:
        System.INotify
        System.INotify.ByteString
    other-modules:
        System.INotify.Masks

    ghc-options: -Wall
    includes: sys/inotify.h
    hs-source-dirs: src


test-suite test001
    type: exitcode-stdio-1.0
    build-depends: base, directory, hinotify
    hs-source-dirs: src tests
    main-is: test001-list-dir-contents.hs
    other-modules: Utils
    ghc-options: -Wall

test-suite test002
    type: exitcode-stdio-1.0
    build-depends: base, directory, hinotify
    hs-source-dirs: src tests
    main-is: test002-writefile.hs
    other-modules: Utils
    ghc-options: -Wall

test-suite test003
    type: exitcode-stdio-1.0
    build-depends: base, directory, hinotify
    hs-source-dirs: src tests
    main-is: test003-removefile.hs
    other-modules: Utils
    ghc-options: -Wall

test-suite test004
    type: exitcode-stdio-1.0
    build-depends: base, directory, hinotify
    hs-source-dirs: src tests
    main-is: test004-modify-file.hs
    other-modules: Utils
    ghc-options: -Wall

test-suite test005
    type: exitcode-stdio-1.0
    build-depends: base, directory, hinotify
    hs-source-dirs: src tests
    main-is: test005-move-file.hs
    other-modules: Utils
    ghc-options: -Wall



test-suite test001-BS
    type: exitcode-stdio-1.0
    build-depends: base, bytestring, directory, hinotify, posix-paths, unix, utf8-string
    hs-source-dirs: src tests
    main-is: test001-list-dir-contents-BS.hs
    other-modules: Utils.ByteString
    ghc-options: -Wall

test-suite test002-BS
    type: exitcode-stdio-1.0
    build-depends: base, bytestring, directory, hinotify, posix-paths, unix, utf8-string
    hs-source-dirs: src tests
    main-is: test002-writefile-BS.hs
    other-modules: Utils.ByteString
    ghc-options: -Wall

test-suite test003-BS
    type: exitcode-stdio-1.0
    build-depends: base, bytestring, directory, hinotify, posix-paths, unix, utf8-string
    hs-source-dirs: src tests
    main-is: test003-removefile-BS.hs
    other-modules: Utils.ByteString
    ghc-options: -Wall

test-suite test004-BS
    type: exitcode-stdio-1.0
    build-depends: base, bytestring, directory, hinotify, posix-paths, unix, utf8-string
    hs-source-dirs: src tests
    main-is: test004-modify-file-BS.hs
    other-modules: Utils.ByteString
    ghc-options: -Wall

test-suite test005-BS
    type: exitcode-stdio-1.0
    build-depends: base, bytestring, directory, hinotify, posix-paths, unix, utf8-string
    hs-source-dirs: src tests
    main-is: test005-move-file-BS.hs
    other-modules: Utils.ByteString
    ghc-options: -Wall

