name:               hinotify
version:            0.3.9
build-type:         Simple
synopsis:           Haskell binding to inotify
description:
    This library provides a wrapper to the Linux Kernel's inotify feature,
    allowing applications to subscribe to notifications when a file is
    accessed or modified.
category:           System
homepage:           https://github.com/kolmodin/hinotify.git
license:            BSD3
license-file:       LICENSE
author:             Lennart Kolmodin
maintainer:         Lennart Kolmodin <kolmodin@gmail.com>
extra-source-files: README.md, CHANGELOG.md
cabal-version:      >= 1.10

source-repository head
  type: git
  location: git://github.com/kolmodin/hinotify.git

library
    default-language: Haskell2010
    build-depends:  base >= 4.5.0.0 && < 5, containers, directory, unix,
                    async >= 1.0 && < 2.2

    exposed-modules:
        System.INotify
    other-modules:
        System.INotify.Masks

    ghc-options: -Wall
    includes: sys/inotify.h
    hs-source-dirs: src

test-suite test001
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    build-depends: base, directory, hinotify
    hs-source-dirs: src tests
    main-is: test001-list-dir-contents.hs
    other-modules: Utils
    ghc-options: -Wall

test-suite test002
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    build-depends: base, directory, hinotify
    hs-source-dirs: src tests
    main-is: test002-writefile.hs
    other-modules: Utils
    ghc-options: -Wall

test-suite test003
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    build-depends: base, directory, hinotify
    hs-source-dirs: src tests
    main-is: test003-removefile.hs
    other-modules: Utils
    ghc-options: -Wall

test-suite test004
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    build-depends: base, directory, hinotify
    hs-source-dirs: src tests
    main-is: test004-modify-file.hs
    other-modules: Utils
    ghc-options: -Wall

test-suite test005
    type: exitcode-stdio-1.0
    build-depends: base, directory, hinotify
    default-language: Haskell2010
    hs-source-dirs: src tests
    main-is: test005-move-file.hs
    other-modules: Utils
    ghc-options: -Wall

test-suite test006
    type: exitcode-stdio-1.0
    build-depends: base, directory, hinotify
    default-language: Haskell2010
    hs-source-dirs: src tests
    main-is: test006-callbackHang.hs
    other-modules: Utils
    ghc-options: -Wall
